--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
               <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
                 aria-labelledby="form-heading" aria-controls="today forecast" />
               <div class="input-group">
-                <button type="submit" class="btn search-button btn-primary" id="search-button" aria-label="submit search">
+                <button type="submit" class="btn search-button btn-primary" id="search-button"
+                  aria-label="submit search">
                   Search
                 </button>
                 <hr class="hr weather-hr " />
@@ -43,7 +44,7 @@
 
       <div class="col-lg-9  mt-3 pb-3">
         <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row p-3"  role="region" aria-live="polite"></section>
+        <section id="forecast" class="row p-3" role="region" aria-live="polite"></section>
       </div>
     </div>
   </div>
@@ -52,7 +53,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="assets/js/main.js"></script>
+  <script type='module' src="assets/js/main.js"></script>
 </body>
 
 </html>
